fixed navbar z-index

--- a/src/Common/Navbar/Navbar.module.css
+++ b/src/Common/Navbar/Navbar.module.css
@@ -7,7 +7,7 @@
     left: 0%;
     width: 100vw;
     padding: 0.5rem 5vw;
-    z-index: 1;
+    z-index: 2;
     justify-content: space-between;
     align-items: center;
 
